2009-01-20  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Bug 22720: Make XMLHttpRequest work in Workers
        <https://bugs.webkit.org/show_bug.cgi?id=22720>

        More removal of document usage from XMLHttpRequest.
        * Abstracted away the sync and async requests behind the ThreadableLoader class, which
          will get an implementation for Workers.  It follows the same model as SubresourceLoader, since
          it is a thin wrapper around it.
        * Consolidated dashboard compatibility checks into usesDashboardBackwardCompatibilityMode
          which handles workers.

        No observable change in behavior, so no test.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.scons:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * loader/DocumentThreadableLoader.cpp: Added.
        (WebCore::DocumentThreadableLoader::create):
        (WebCore::DocumentThreadableLoader::DocumentThreadableLoader):
        (WebCore::DocumentThreadableLoader::~DocumentThreadableLoader):
        (WebCore::DocumentThreadableLoader::cancel):
        (WebCore::DocumentThreadableLoader::willSendRequest):
        (WebCore::DocumentThreadableLoader::didSendData):
        (WebCore::DocumentThreadableLoader::didReceiveResponse):
        (WebCore::DocumentThreadableLoader::didReceiveData):
        (WebCore::DocumentThreadableLoader::didFinishLoading):
        (WebCore::DocumentThreadableLoader::didFail):
        (WebCore::DocumentThreadableLoader::receivedCancellation):
        * loader/DocumentThreadableLoader.h: Added.
        (WebCore::DocumentThreadableLoader::refThreadableLoader):
        (WebCore::DocumentThreadableLoader::derefThreadableLoader):
        * loader/SubresourceLoaderClient.h:
        (WebCore::SubresourceLoaderClient::didReceiveData):
        * loader/ThreadableLoader.cpp: Added.
        (WebCore::ThreadableLoader::create):